add github link

--- a/Heart Disease Prediction.ipynb
+++ b/Heart Disease Prediction.ipynb
@@ -12,6 +12,8 @@
     "\n",
     "RUID: 215008323\n",
     "\n",
+    "GitHub link: https://github.com/ssy38/heart-disease-prediction-cs210\n",
+    "\n",
     "## Objective: Create a predictive model and visualize risk factors for heart disease based on historical patient data. What risk factors in terms of demographics, health conditions can we detect to anticipate heart disease?\n",
     "## Summary of Report\n",
     "### Why is this important?\n",
@@ -88,7 +90,9 @@
      "text": [
       "Dataset URL: https://www.kaggle.com/datasets/fedesoriano/heart-failure-prediction\n",
       "License(s): ODbL-1.0\n",
-      "heart-failure-prediction.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
+      "Downloading heart-failure-prediction.zip to /Users/sheldonyoon/project\n",
+      "  0%|                                               | 0.00/8.56k [00:00<?, ?B/s]\n",
+      "100%|██████████████████████████████████████| 8.56k/8.56k [00:00<00:00, 10.2MB/s]\n"
      ]
     }
    ],
@@ -1846,11 +1850,6 @@
     "* Many of these can be done at home, like measuring maximum heart rate, blood pressure, or identifying chest pain. However, some of these require going to the doctor or specialized tests, like measuring cholesterol or taking an ECG, which is why good medical infrastructure is important in reducing what is worldwide human's greatest killer today.\n",
     "* More research has and will continue to be done on more efficient ways to predict heart disease as well as preventing and mitigating heart disease."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
